[tool.poetry]
name = "truss-examples"
version = "0.1.0"
description = ""
authors = ["Truss Maintainers <team@trussml.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
truss = { git = "https://github.com/basetenlabs/truss.git" }
pyyaml = "^6.0.1"
tritonclient = {extras = ["all", "cuda"], version = "^2.41.1"}
torch = "^2.1.2"
transformers = "^4.37.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ipython = "^8.14.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
