[tool.poetry]
name = "truss-examples"
version = "0.1.0"
description = ""
authors = ["Truss Maintainers <team@trussml.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ipython = "^8.14.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
